--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Eddie Webb"
-baseURL = "https://example.com/"
+baseURL = "https://jenapp.github.io/"
 theme = "hugo-resume"
 languageCode = "en-us"
 PygmentsCodeFences = true
